--- a/src/templates/nltk.html
+++ b/src/templates/nltk.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title></title>
 
-    <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="./css/nltk.css"/>
+    <link rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/static/css/nltk.css"/>
 
 </head>
 <body>
@@ -42,7 +42,7 @@ Evolving from older bat-and-ball games, an early form of baseball was being play
 </div>
 
 
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="/static/bower_components/jquery/dist/jquery.min.js"></script>
 <script>
 
     function selectNoun(target){
